# HiQE

./: CMakeLists.txt
src/: CMakeLists.txt  HiQE.cpp
src/include/: HiQE.h
src/include/memory/: memory.h
src/include/operation/: operation.h
